--- a/sass/main.scss
+++ b/sass/main.scss
@@ -262,6 +262,7 @@
             width: fit-content;
             height: fit-content;
         }
+        
     }
 }
 @media screen and (min-width:320px){
@@ -301,8 +302,22 @@
             width: 250px;
             left: 10%;
         }
+        & .final-msg{
+            width: 280px;
+            height: 500px;
+            left: 25px;
+            border-radius: 10px;
+            & .lose-win{
+                font-size: 2.5rem;
+                margin-bottom: 30px;
+            }
+            & p{
+                font-size:1.7rem;
+            }
+        }
     }
-}
+    }
+
 @media screen and (min-width:375px){
     .container{
         & .social-media{
@@ -334,6 +349,16 @@
         & #canvas{
             left: 20%;
         }
+        & .final-msg{
+            width: 300px;
+            height: 500px;
+            left: 40px;
+            border-radius: 10px;
+            & .lose-win{
+                font-size: 2.5rem;
+                margin-bottom: 30px;
+            }
+        }
     }
 }
 @media screen and (min-width:425px){
@@ -361,6 +386,16 @@
             height: 150px;
             width: 280px;
             left: 20%;
+        }
+        & .final-msg{
+            width: 300px;
+            height: 500px;
+            left: 75px;
+            border-radius: 10px;
+            & .lose-win{
+                font-size: 2.5rem;
+                margin-bottom: 30px;
+            }
         }
     }
 }
@@ -395,6 +430,17 @@
             width: 500px;
             height: 245px;
             left: 20%;
+        }
+        & .final-msg{
+            left: 155px;
+            width: 500px;
+            & .lose-win{
+                font-size: 3rem;
+                margin-bottom: 30px;
+            }
+            & p{
+                font-size:2.3rem;
+            }
         }
     }
 }
@@ -436,6 +482,9 @@
                 width: 500px;
                 left: 25%;
             }
+            & .final-msg{
+                left: 255px;
+            }
         }
     }
 
@@ -465,6 +514,10 @@
             top: 15%;
             left: 36%;
         }
+        
+        & .final-msg{
+            left: 520px;
+        }
     }
 }
 
@@ -493,6 +546,9 @@
         & #canvas{
             top: 15%;
             left: 36%;
+        }
+        & .final-msg{
+            left: 670px;
         }
     }
 }
