--- a/sass/main.scss
+++ b/sass/main.scss
@@ -327,23 +327,24 @@
         }
     }
     .darkmode{
-        left:calc(35% + 6.5%);
+        left:calc(35% + 4.5%);
+        top: 10px;
     }
     .game__container{
         & .Container__keys{
-            transform: translate(13%,-34%);
-            width: 80vw;
+            transform: translate(25%,-16%);
+            width: 70vw;
             & button{
                 padding: 1rem 1.2rem;
                 margin: 8px;
             }
         }
         & .screen_word{
-            width: 82%;
-            height: 35px;
+            width: 72%;
+            height: 25px;
             position: absolute;
-            left: 9%;
-            top: calc(32.4% + 3%);
+            left: 17%;
+            top: calc(37.4% + 3%);
             
         }
         & #canvas{
@@ -351,12 +352,15 @@
         }
         & .final-msg{
             width: 300px;
-            height: 500px;
+            height: 300px;
             left: 40px;
             border-radius: 10px;
             & .lose-win{
                 font-size: 2.5rem;
                 margin-bottom: 30px;
+            }
+            & p{
+                text-align: center;
             }
         }
     }
